<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navigation_1" />

        <item
            android:id="@+id/navigation_item_2"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navigation_2" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navigation_3" />

        <item
            android:id="@+id/navigation_item_4"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navigation_4" />

    </group>

    <item android:title="其他">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@mipmap/ic_launcher_round"
                    android:title="@string/navigation_5" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@mipmap/ic_launcher_round"
                    android:title="@string/navigation_6" />
            </group>
        </menu>
    </item>

</menu>